--- a/Parallelism/P1/nbproject/project.properties
+++ b/Parallelism/P1/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=P1
-main.class=Data
+main.class=MainFunction
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
